<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_create_join_rect_bottom"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="20dp"
    android:paddingRight="24dp"
    android:paddingBottom="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fcr_login_free_tips_login_guide_title"
        android:textColor="#16D1A4"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/fcr_login_free_tips_login_guide"
        android:textColor="#586376"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/fcr_btn_login2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_fill_rect_white"
        android:paddingLeft="20dp"
        android:paddingTop="6dp"
        android:paddingRight="20dp"
        android:paddingBottom="6dp"
        android:text="@string/fcr_login_free_tips_login_guide_sign_in"
        android:textColor="#191919"
        android:textSize="14sp" />

</LinearLayout>
