<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fcr_white"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/fcr_theme_switch_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fcr_white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_16"
            android:src="@drawable/ic_back_gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/fcr_theme_setting"
            android:textColor="@color/fcr_black"
            android:textSize="@dimen/sp_17" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fcr_theme_switch_head"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginBottom="6dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dp_6">

        <RadioGroup
            android:id="@+id/fcr_rg_theme_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_theme_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fcr_theme_light" />

            <RadioButton
                android:id="@+id/rb_theme_night"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/fcr_theme_night" />
        </RadioGroup>
    </RelativeLayout>


</RelativeLayout>


